# cpp-ssdp

./: CMakeLists.txt  README.md  main.cpp
lib/: client.cpp  client.h  discovery_broadcaster.cpp  discovery_broadcaster.h  disovery_message.cpp  disovery_message.h  parser.cpp  parser.h  udp_listener.cpp  udp_listener.h
